--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil - Mon Site</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <header>
@@ -23,6 +23,6 @@
     <footer>
         <p>&copy; 2025 Mon Site Personnel</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="Script/script.js"></script>
 </body>
 </html>
